unpackaged/main/default/objects/LegalEntity__c/LegalEntity__c.object-meta.xml
<CustomObject>
    <label>Entité Légale</label>
    <nameField>
        <label>Nom de l&#39;Entité Légale</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Entités Légales</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>