unpackaged/main/default/objects/LegalEntity__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Actif</label>
    <type>Checkbox</type>
</CustomField>