unpackaged/main/default/objects/LegalEntity__c/fields/CompanyName__c.field-meta.xml
<CustomField>
    <fullName>CompanyName__c</fullName>
    <label>Nom de la société</label>
    <length>255</length>
    <type>Text</type>
</CustomField>