unpackaged/main/default/objects/LegalEntity__c/fields/LegalEntityCode__c.field-meta.xml
<CustomField>
    <fullName>LegalEntityCode__c</fullName>
    <externalId>true</externalId>
    <label>Code Entité Légale</label>
    <length>255</length>
    <type>Text</type>
</CustomField>