unpackaged/main/default/objects/LegalEntity__c/fields/NationalID__c.field-meta.xml
<CustomField>
    <fullName>NationalID__c</fullName>
    <label>Identifiant national</label>
    <length>255</length>
    <type>Text</type>
</CustomField>