unpackaged/main/default/objects/LegalEntity__c/fields/RCSNumber__c.field-meta.xml
<CustomField>
    <fullName>RCSNumber__c</fullName>
    <label>Numéro RCS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>