unpackaged/main/default/objects/LegalEntity__c/fields/ShareCapital__c.field-meta.xml
<CustomField>
    <fullName>ShareCapital__c</fullName>
    <label>Capital social</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>